[package]
name = "font2png"
version = "0.1.0"
authors = ["疯魔慕薇 <kfanjian@gmail.com>"]
edition = "2018"
description = "A tool for converting TTF icon font to images."
license = "MIT"
homepage = "https://blog.kfanjian.com/font2png"
documentation = "https://blog.kfanjian.com/font2png"
repository = "https://github.com/kofj/font2png"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rusttype = "0.9.2"
imageproc = "0.22.0"
structopt = "0.3"
colors-transform = "0.2.5"

[profile.release]
lto = true
codegen-units = 1
